# Deep-Research-Agent

./: .gitignore  README.md  pyproject.toml
deep_research_agent/: __init__.py  main.py
deep_research_agent/agents/: __init__.py  planner_agent.py  report_agent.py  search_agent.py
deep_research_agent/interfaces/: __init__.py  cli.py
deep_research_agent/utils/: file_utils.py
