[project]
name = "deep-research-agent"
version = "0.1.0"
description = "An open source local deep research agent"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Johannes Schießl", email = "contact.johannes@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.66.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "typer>=0.15.1",
]
